sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-20.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res8_dir_files_2d
---
Found {
    items: [
        ReadDirResponseItem {
            file_path: "foo/bar",
            file_name: "bar",
            file_type: Dir,
            deleted_at: Some(
                SystemTime {
                    tv_sec: 1261440000,
                    tv_nsec: 0,
                },
            ),
        },
        ReadDirResponseItem {
            file_path: "foo/test.txt",
            file_name: "test.txt",
            file_type: File,
            deleted_at: Some(
                SystemTime {
                    tv_sec: 1261440000,
                    tv_nsec: 0,
                },
            ),
        },
    ],
}
