sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-21.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res8_dir_files_2
---
Found {
    items: [],
}
