sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-27.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res9_dir_files_1
---
Found {
    items: [
        ReadDirResponseItem {
            file_path: "foo",
            file_name: "foo",
            file_type: Dir,
            size: 0,
            modified_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
            deleted_at: None,
        },
    ],
}
