sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-3.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: blob_id_2
---
Created {
    blob_id: "qKp04Jj225gU8Bx-Ea54VukNTUn6waoWbO0pggo2587XBb_If0P0bRCCkCcNXQGm",
}
