sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-30.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res10
---
GetCommitHistoryResponse {
    items: [
        GetCommitHistoryResponseItem {
            commit_id: "x1-_V7K2M7yeQz6EhJuL-4_EUTvadfxAQvdWDk2Y4V1LW0dx2Tn6-c3w1w-PhSy7",
            commit_rank: 3,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "RIo9OWHLXCHN-Rze_F6PrX_0L-T8pF2T6KaIJGj5lPkqGttvItLewVBImwOSRa9b",
            commit_rank: 2,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "DE7JZhKe439BrBaAe5O-IBDM-M98S6PIRnVDK6JglpJpzO1yu_DjfGqqjPZ8cEY-",
            commit_rank: 1,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "G08kdP9vukX6RgjnWNCqd24WFH7ICIoDglTyU-5fzU_ifDha6jk_demCXzdUss_w",
            commit_rank: 0,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
    ],
}
