sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-5.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res2_changelist
---
GetWorkspaceChangelistResponse {
    items: [
        GetWorkspaceChangelistResponseItem {
            file_path: "foo",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetWorkspaceChangelistResponseItem {
            file_path: "foo/test.txt",
            blob_id: Some(
                "jw-czHAStEMLXbUqvBIb1tuk34MtlDjhxacVO-sG7rLa9XMvDfyayf51czUgud8N",
            ),
            deleted: false,
            file_type: File,
        },
        GetWorkspaceChangelistResponseItem {
            file_path: "bar",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetWorkspaceChangelistResponseItem {
            file_path: "foo/bar",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
    ],
}
