sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-7.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res3_files
---
GetAllTrunkFilesResponse {
    items: [
        GetAllTrunkFilesResponseItem {
            file_path: "foo",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetAllTrunkFilesResponseItem {
            file_path: "foo/test.txt",
            blob_id: Some(
                "jw-czHAStEMLXbUqvBIb1tuk34MtlDjhxacVO-sG7rLa9XMvDfyayf51czUgud8N",
            ),
            deleted: false,
            file_type: File,
        },
        GetAllTrunkFilesResponseItem {
            file_path: "bar",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetAllTrunkFilesResponseItem {
            file_path: "foo/bar",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
    ],
}
